--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
-html, body{
-  margin:0;
+html,
+body {
+  margin: 0;
 }
- /* video css */
-.full-screen-video-container{
+/* video css */
+.full-screen-video-container {
   position: relative;
   height: 100vh;
   width: 100vw;
@@ -22,41 +23,46 @@ html, body{
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.full-screen-video-content{
+.full-screen-video-content {
   background-color: transparent;
-  color:white;
+  color: white;
   padding: 20px;
   font-size: 30px;
   margin-top: 100px;
 }
 
 /* col-4 */
-.container-fluid{
-  position:relative;
-  height:75vh;
-}
-.col-4, .col-8{
-height: 75vh;
-margin:0;
-padding: 0;
-  border-top-style: dotted;
-  border-right-style: dotted;
-  border-bottom-style: dotted;
-  border-left-style: dotted;
+
+.carousel-4,
+.carousel-8 {
+  height: 75vh;
+  margin: 0;
+  padding: 0;
+
 }
 
-.image-col-4 {
+.carousel-4 {
+  background-image: url('/img/Ace.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 0;
+}
+.carousel-4:hover {
+  opacity: 0.6;
+  z-index: 1;
+}
+.image-Ace {
   opacity: 1;
-  display: block;
-  margin:0;
+  margin: 0;
   padding: 0;
   width: 100%;
-  height: auto;
-  transition: .5s ease;
-  backface-visibility: hidden;
+  height: 100%;
 }
 
-.middle {
+/* .middle {
   transition: .5s ease;
   opacity: 0;
   position: fixed;
@@ -80,5 +86,9 @@ padding: 0;
   color: white;
   font-size: 16px;
   padding: 16px 32px;
-}
+} */
+
 /* col-8 carousel */
+.home-button {
+  z-index: 1;
+}
