--- a/css/styles.css
+++ b/css/styles.css
@@ -4,25 +4,53 @@ body {
 }
 /*------------Navbar--------------------*/
 .navbar {
-    transition: all 0.4s;
+  transition: all 0.4s;
 }
 
 .navbar .nav-link {
-    color: #fff;
+  color: #fff;
 }
 
 .navbar .nav-link:hover,
 .navbar .nav-link:focus {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 .navbar .navbar-brand {
-    color: #fff;
+  color: #fff;
 }
-.logo{
+.logo {
   height: 250px;
   width: 250px;
+}
+.navbar.active {
+  background: #fff;
+  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.navbar.active .nav-link {
+  color: #555;
+}
+
+.navbar.active .nav-link:hover,
+.navbar.active .nav-link:focus {
+  color: #555;
+  text-decoration: none;
+}
+
+.navbar.active .navbar-brand {
+  color: #555;
+}
+@media (max-width: 991.98px) {
+  .navbar {
+    background: #fff;
+  }
+
+  .navbar .navbar-brand,
+  .navbar .nav-link {
+    color: #555;
+  }
 }
 /*-----------video css------------------*/
 .full-screen-video-container {
@@ -43,7 +71,7 @@ body {
   content: '';
   background-color: #000;
   opacity: 0.3;
-  z-index: ;
+  z-index: 1;
 }
 
 .full-screen-video-container video {
@@ -100,30 +128,31 @@ body {
   opacity: 0.6;
   z-index: 1;
 }
-/* .image-Ace {
-  opacity: 1;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-} */
 
 /* col-8 carousel */
 .home-button {
   z-index: 1;
 }
-/* .carousel-images {
-  max-height: 100vh;
-  max-width: 100vh;
+
+.carousel-item img {
+  width: 100%;
+  max-height: 1187.25px;
+}
+
+/*------------Banner-----------*/
+.jumbotron {
+  margin-top: 260px;
+  position: relative;
+  display: flex;
+  height: 500px;
+  width: 100%;
+}
+.banner_container {
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
-} */
-.carousel-item img {
-  width: 100%;
-  max-height: 1187.25px;
 }
 
 @media only screen and (max-width: 600px) {
