--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 html,
 body {
   margin: 0;
+  padding: 0;
+  background-color: #FAFAFA;
 }
 /*------------Navbar--------------------*/
 .navbar {
@@ -8,24 +10,24 @@ body {
 }
 
 .navbar .nav-link {
-  color: #fff;
+  color: #fafafa;
 }
 
 .navbar .nav-link:hover,
 .navbar .nav-link:focus {
-  color: #fff;
+  color: #fafafa;
   text-decoration: none;
 }
 
 .navbar .navbar-brand {
-  color: #fff;
+  color: #fafafa;
 }
 .logo {
   height: 250px;
   width: 250px;
 }
 .navbar.active {
-  background: #fff;
+  background: #fafafa;
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -44,7 +46,7 @@ body {
 }
 @media (max-width: 991.98px) {
   .navbar {
-    background: #fff;
+    background: #fafafa;
   }
 
   .navbar .navbar-brand,
@@ -144,7 +146,7 @@ body {
   margin-top: 260px;
   position: relative;
   display: flex;
-  height: 500px;
+  height: 650px;
   width: 100%;
 }
 .banner_container {
