--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,10 @@ html,
 body {
   margin: 0;
   padding: 0;
-  background-color: #FAFAFA;
+  background-color: #fafafa;
 }
 /*------------Navbar--------------------*/
-.navbar {
+navbar {
   transition: all 0.4s;
 }
 
@@ -13,36 +13,9 @@ body {
   color: #fafafa;
 }
 
-.navbar .nav-link:hover,
-.navbar .nav-link:focus {
-  color: #fafafa;
-  text-decoration: none;
-}
-
-.navbar .navbar-brand {
-  color: #fafafa;
-}
 .logo {
   height: 250px;
   width: 250px;
-}
-.navbar.active {
-  background: #fafafa;
-  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.navbar.active .nav-link {
-  color: #555;
-}
-
-.navbar.active .nav-link:hover,
-.navbar.active .nav-link:focus {
-  color: #555;
-  text-decoration: none;
-}
-
-.navbar.active .navbar-brand {
-  color: #555;
 }
 @media (max-width: 991.98px) {
   .navbar {
@@ -53,6 +26,33 @@ body {
   .navbar .nav-link {
     color: #555;
   }
+}
+.navbar.shift ul li a {
+  position: relative;
+  z-index: 1;
+}
+.navbar.shift ul li a:after {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+  height: 1px;
+  content: '.';
+  color: transparent;
+  background: brown;
+  visibility: none;
+  opacity: 0;
+  z-index: -1;
+}
+
+.navbar.shift ul li a:hover:after {
+  opacity: 1;
+  visibility: visible;
+  height: 100%;
 }
 /*-----------video css------------------*/
 .full-screen-video-container {
@@ -77,7 +77,7 @@ body {
 }
 
 .full-screen-video-container video {
-  z-index: -1;
+  z-index: 0;
   position: absolute;
   width: auto;
   height: auto;
@@ -142,20 +142,6 @@ body {
 }
 
 /*------------Banner-----------*/
-.jumbotron {
-  margin-top: 260px;
-  position: relative;
-  display: flex;
-  height: 650px;
-  width: 100%;
-}
-.banner_container {
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 @media only screen and (max-width: 600px) {
 }
