--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,10 @@ html,
 body {
   margin: 0;
   padding: 0;
-  background-color: #fafafa;
+  font-family: 'Roboto', sans-serif;
 }
 /*------------Navbar--------------------*/
-navbar {
+.navbar {
   transition: all 0.4s;
 }
 
@@ -16,16 +16,6 @@ navbar {
 .logo {
   height: 250px;
   width: 250px;
-}
-@media (max-width: 991.98px) {
-  .navbar {
-    background: #fafafa;
-  }
-
-  .navbar .navbar-brand,
-  .navbar .nav-link {
-    color: #555;
-  }
 }
 .navbar.shift ul li a {
   position: relative;
@@ -43,7 +33,7 @@ navbar {
   height: 1px;
   content: '.';
   color: transparent;
-  background: brown;
+  background: rgb(180, 154, 4);
   visibility: none;
   opacity: 0;
   z-index: -1;
@@ -54,6 +44,7 @@ navbar {
   visibility: visible;
   height: 100%;
 }
+
 /*-----------video css------------------*/
 .full-screen-video-container {
   position: relative;
@@ -89,26 +80,15 @@ navbar {
 }
 
 .full-screen-video-content {
-  background-color: transparent;
-  color: white;
-  padding: 20px;
-  font-size: 30px;
+  justify-content: center;
+  align-self: center;
   margin-top: 100px;
+  z-index: 1;
 }
 
-/* col-4 */
+/*-------Artist Selector-----------*/
 
-.carousel-ace-4,
-.carousel-ace-8,
-.carousel-adrian-4,
-.carousel-adrian-8 {
-  height: 75vh;
-  margin: 0;
-  padding: 0;
-}
-
-.carousel-ace-4 {
-  background-image: url('/img/ace/Ace.png');
+.artist-banner-thumbnail {
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -116,17 +96,8 @@ navbar {
   align-items: center;
   z-index: 0;
 }
-.carousel-adrian-4 {
-  background-image: url('/img/adrian/AdrianProfile.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 0;
-}
-.carousel-ace-4:hover,
-.carousel-adrian-4:hover {
+
+.artist-banner-thumbnail:hover {
   opacity: 0.6;
   z-index: 1;
 }
@@ -135,12 +106,40 @@ navbar {
 .home-button {
   z-index: 1;
 }
-
-.carousel-item img {
-  width: 100%;
-  max-height: 1187.25px;
+.bg-img1 {
+  position: relative;
+  z-index: 0;
 }
-
+.text-fit {
+  background: transparent;
+  border-style: double;
+  position: absolute;
+  font-family: inherit;
+  font-size: 3vw;
+  font-weight: 80px;
+  z-index: 1;
+}
+#about {
+  height: 60vh;
+  width: 100vw;
+}
+.lead {
+  display: flex;
+  text-align: center;
+}
+.card {
+  width: 1000px;
+  border: hidden;
+  background-color: transparent;
+  font-family: inherit;
+  font-weight: bold;
+}
+.bg-img2 {
+  background-image: url('/img/banner/artist-tattoo-creative-tattooist.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
 /*------------Banner-----------*/
 
 @media only screen and (max-width: 600px) {
