--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,58 @@
-body{
-margin: 0;
-padding: 0;
-background: red;
+body {
+  margin: 0;
+  padding: 0;
+  background: #fafafa;
+  font-family: 'Roboto', sans-serif;
+  background-image: url('/img/star.jpg');
+  font-weight: bold;
+  font-size: 18px;
 }
 
+.logo {
+  height: 250px;
+  width: 250px;
+}
+.navbar {
+  position: relative;
+}
+
+input [type='text'],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid tan;
+  border-radius: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type='submit'] {
+  background-color: rgb(192, 192, 192);
+  color: black;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+input[type='submit']:hover {
+  background-color: rgb(41, 131, 173);
+  color: white;
+}
+.container {
+  font-family: inherit;
+  position: relative;
+  border-radius: 5px;
+  color: black;
+  width: 800px;
+  text-align: center;
+  background-color: slategray;
+  opacity: 0.85;
+}
+#form {
+  position: relative;
+}
+.lineicon {
+  color: white;
+}
