--- a/css/ace.css
+++ b/css/ace.css
@@ -1,7 +1,10 @@
 body {
   margin: 0;
   padding: 0%;
-  background-color: red;
+  background-color: rgb(184, 0, 0);
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
 .logo {
   height: 250px;
@@ -64,14 +67,21 @@ h1 {
   color: white;
 }
 
-.carousel .item {
-  height: 300px;
+.container {
+  background-color: #fafafa;
 }
 
-.item img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-height: 300px;
+@media only screen and (max-width: 600px) {
 }
 
+@media only screen and (min-width: 600px) {
+}
+
+@media only screen and (min-width: 768px) {
+}
+
+@media only screen and (min-width: 992px) {
+}
+
+@media only screen and (min-width: 1200px) {
+}
