--- a/css/contact.css
+++ b/css/contact.css
@@ -60,6 +60,12 @@ input[type='submit']:hover {
   height: 95px;
   width: 100%;
 }
+.map {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
 @media only screen and (max-width: 600px) {
 }
 
