--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ button{
   background-color: rgba(0, 0, 0, 0.6);
 }
 .bg-img2 {
-  background-image: url('../img/banner/artisttattoocreativetattooist.jpg');
+  background-image: url('./img/banner/artisttattoocreativetattooist.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
