--- a/css/ace.css
+++ b/css/ace.css
@@ -39,7 +39,7 @@ body {
   height: 1px;
   content: '.';
   color: transparent;
-  background: gold;
+  background: transparent;
   visibility: none;
   opacity: 0;
   z-index: -1;
