--- a/css/adrian.css
+++ b/css/adrian.css
@@ -8,8 +8,8 @@ body {
 .navbar {
   transition: all 0.4s;
 }
-.a .navlink {
-  color: gold;
+.navbar .nav-item .nav-link {
+  color: #fafafa;
 }
 .logo {
   height: 250px;
