--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,9 @@ body {
 .navbar {
   transition: all 0.4s;
 }
-
+.navbar .nav-item .nav-link {
+  color: #fafafa;
+}
 .logo {
   height: 250px;
   width: 250px;
