link color change

--- a/css/contact.css
+++ b/css/contact.css
@@ -16,7 +16,7 @@ body {
   position: relative;
 }
 .navbar .nav-item .nav-link {
-  color: #fafafa;
+  color:gold gold;
 }
 input [type='text'],
 select,
